crates/rymx/tests/snapshots/full__main@other__prelude.rym.snap
---
source: crates/rymx/tests/full.rs
expression: "String::from_utf8(out).unwrap()"
input_file: crates/rymx/tests/other/prelude.rym
---
Debug: Finished tokenizing
Fn [fn]
HSpace [ ]
Ident [println]
ParenOpen [(]
Ident [fmt]
Colon [:]
HSpace [ ]
Ident [String]
Comma [,]
HSpace [ ]
DotDot [..]
Ident [args]
Colon [:]
HSpace [ ]
BracketOpen [[]
Impl [impl]
HSpace [ ]
Ident [Display]
BracketClose []]
ParenClose [)]
HSpace [ ]
ThickArrow [=>]
HSpace [ ]
BraceOpen [{]
VSpace [\n]
HSpace [\t]
Comment [// TODO]
VSpace [\n]
BraceClose [}]
VSpace [\n]

Error: Expected `)` or identifier, found `..`
   ╭─[/home/simon/dev/rym/crates/rymx/tests/other/prelude.rym:1:25]
   │
 1 │ fn println(fmt: String, ..args: [impl Display]) => {
   │                         ─┬  
   │                          ╰── Expected `)` or identifier
───╯


